# tony

./: .gitignore  Cargo.toml  README  README.md  TODO  build.rs
examples/: 42.tony  add.tony  bare.tony  bubblesort.tony  builtins.tony  comments.tony  fib.tony  forloop.tony  hanoi-ident-mispell-err.tony  hanoi-newline-err.tony  hanoi-parenthesis-err.tony  hanoi.tony  hello_world.tony  if_then.tony  prime_check.tony  quicksort.tony  return_type-err.tony  str_reverse.tony
fuzz/: Cargo.toml  tokens.dict
fuzz/fuzz_targets/: full.rs  lexer.rs  llvm.rs  parser.rs
runtime/: Cargo.toml
runtime/src/: builtins.rs  gc.rs  lib.rs
runtime/src/gc/: lists.rs
src/: ast.rs  builtins.rs  error.rs  lexer.rs  lib.rs  llvm.rs  main.rs  parser.rs  symbols.rs
src/llvm/: gc.rs
src/parser/: grammar.lalrpop
