[package]
name = "tony"
version = "0.1.0"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tony_frontend"
path = "src/lib.rs"

[[bin]]
name = "tony"
path = "src/main.rs"


[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = "*"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
uuid = { version = "0.7.4", features = ["v4"] }
libc = "*"
libfuzzer-sys = { version = "0.3", optional = true, features = ["arbitrary-derive"] }

[features]
default = []
fuzzing = ["libfuzzer-sys"]

[workspace]
members = ["runtime", ]

[profile.dev]
overflow-checks = false
debug-assertions = false
lto = false
incremental = false
panic = "abort"

[profile.release]
overflow-checks = false
debug-assertions = false
lto = false
incremental = false
panic = "abort"

